# calendar-assistant

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  react_assistant_graph.mmd
backend/app/: __init__.py  assistant_identity.py  config.py  deps.py  main.py  security.py
backend/app/agent/: README.md  __init__.py
backend/app/agent/db/: langgraph_checkpoints.sqlite-shm  langgraph_checkpoints.sqlite-wal
backend/app/agent/graphs/: __init__.py  builder.py  chat_agent.py  checkpoint.py  react_graph.py  routing.py  state.py
backend/app/agent/graphs/units/: __init__.py  (+2 more)
backend/app/agent/prompts/: __init__.py  chat.py
backend/app/agent/streaming/: __init__.py  events.py  graph_stream.py
backend/app/agent/tools/: __init__.py  common.py  execution.py  hitl.py  proposals.py  proposals_calendar.py  proposals_gmail.py  read_calendar.py  tool_schema.py
backend/app/agent/utils/: __init__.py  build_graph.py  llm.py
backend/app/api/: __init__.py  auth.py  chat.py  health.py
backend/app/core/: __init__.py  errors.py  request_context.py  resilience.py  safety.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/db/databases/: calendar_assistant.db
backend/app/observability/: __init__.py  langsmith_config.py
backend/app/schemas/: __init__.py  auth.py  chat.py
backend/app/services/: __init__.py  calendar_client.py  gmail_client.py  google_credentials.py  google_oauth.py
backend/tests/: README.md  test_chat_api_delete.py  test_errors.py  test_execution_proposals.py  test_execution_summary.py  test_resilience.py  test_safety.py
(+20 files in other folders)
